# multi_modal

./: .gitignore  1-1_fe_pp_20.ipynb  1-2_fe_pp_19.ipynb  README.md  embedding.ipynb  fe_preprocessing.ipynb  init  init_data  pyproject.toml  run.ipynb  run.py  text_pr.ipynb  ts_data_processing.ipynb
experimental/: README.md  g_model_for_regression_CNN.ipynb  g_model_for_regression_only_arousal.ipynb  k-dataaugmentation.ipynb  k_19_embedding_reference.ipynb  k_20_embedding_reference.ipynb  k_Clustering.ipynb  k_KEMDy19_embedding.ipynb  k_KEMDy19_preprocessing.ipynb  k_KEMDy20_embedding.ipynb  k_KEMDy20_preprocessing.ipynb  k_Train_For_Regression.ipynb  k_embedding_reference.ipynb  k_model_for_Regression.ipynb  k_model_for_classification.ipynb  k_model_for_classification_CNN.ipynb  k_model_for_classification_CNN_catMLP.ipynb  k_model_for_classification_CNN_nots.ipynb  k_model_for_regression.ipynb  k_model_for_regression_CNN copy.ipynb  k_model_for_regression_CNN.ipynb  k_model_for_regression_CNN_2.ipynb  k_ts_19_preprocessing.ipynb  k_ts_20_preprocessing.ipynb  k_ts_analysis.ipynb  k_ts_analysis_2.ipynb  k_ts_machine_learning.ipynb  k_ts_preprocessing.ipynb  l_embedding.ipynb  l_model_for_classification.ipynb  l_model_for_classification_CNN.ipynb  l_model_for_classification_CNN_catMLP.ipynb  l_ts_analysis_2.ipynb  l_ts_data_processing.ipynb  test.ipynb
model/: AudioTextProcessor.py  CNN.py  Classification_Model_BackBone.ipynb  Clustering.ipynb  DatasetBundle.py  Embedding.ipynb  Loss.py  MLP.py  ModelExec.py  Model_BackBone.ipynb  README.md  TensorFusionMixer.py  (+13 more)
(+23 files in other folders)
