[tool.poetry]
name = "etri-multi-modal"
version = "0.3.0"
description = ""
authors = [
    "Doohoon Kim <me@doohoon.kim>",
]
readme = "README.md"
packages = [{include = "etri_multi_modal"}]

[tool.poetry.dependencies]
python = "3.10.4"

numba = "^0.56.4"
iprogress = "^0.4"

pandas = "^1.5.3"
torch = "^1.13.1"
tensorflow = "^2.11.0"
keras = "^2.11.0"

matplotlib = "^3.7.0"
scipy = "^1.10.1"
jupyterlab = "^3.6.1"

opencv-python = "^4.7.0.72"
albumentations = "^1.3.0"

tensorflow-datasets = "^4.8.2"
scikit-image = "^0.20.0"
transformers = "^4.27.1"
datasets = "^2.10.1"
evaluate = "^0.4.0"
soundfile = "^0.12.1"

librosa = "^0.10.0.post2"
tqdm = "^4.65.0"
pyctcdecode = "^0.5.0"
seaborn = "^0.12.2"
torchmetrics = "^0.11.4"
antlr4-python3-runtime = "4.9.3"
omegaconf = "^2.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
